Ensure server is correctly shutdown